# proof_of_work

./: .gitignore  docker-compose.yml
client/: api_request.py  hashcash.py  main.py  requirements.txt
proxy/: CMakeLists.txt  Dockerfile  Proxy.postman_collection.json  config.json  config_debug.json  main.cpp
proxy/app/: CMakeLists.txt
proxy/app/Config/: CMakeLists.txt  Config.cpp  Config.hpp
proxy/app/HashCash/: CMakeLists.txt  HashCash.cpp  HashCash.hpp
proxy/app/Proxy/: CMakeLists.txt  Proxy.cpp  Proxy.hpp
proxy/app/Redis/: CMakeLists.txt  Redis.cpp  Redis.hpp
proxy/app/RequestHandler/: CMakeLists.txt  RequestHandler.cpp  RequestHandler.hpp
proxy/app/Timer/: CMakeLists.txt  Timer.hpp
proxy/app/TypeDefs/: CMakeLists.txt  TypeDefs.hpp
proxy/app/UserInfo/: CMakeLists.txt  UserInfo.cpp  UserInfo.hpp
server/: CMakeLists.txt  Dockerfile  main.cpp
server/app/: CMakeLists.txt
server/app/Api/: Api.cpp  Api.hpp  CMakeLists.txt
server/app/HashCash/: CMakeLists.txt  HashCash.cpp  HashCash.hpp
server/app/RequestHandler/: RequestHandler.cpp  RequestHandler.hpp
server/app/Timer/: CMakeLists.txt  Timer.cpp  Timer.hpp
server/app/Weather/: CMakeLists.txt  Weather.cpp  Weather.hpp
